# backtrader

./: .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs-zh.yaml  .readthedocs.yaml  ADVANCED_ENHANCEMENT_REPORT.md  ADVANCED_EXPERT_OPTIMIZATION.md  BT_FIXES_SUMMARY.md  CHANGELOG.md  CHANGELOG_v1.2.0.md  CLAUDE.md  CODE_OPTIMIZATION_SUMMARY.md  COMMISSION_OPTIMIZATION_REPORT.md  COMPREHENSIVE_MISSION_SUCCESS_REPORT.md  CONSERVATIVE_OPTIMIZATION_REPORT.md  CONTRIBUTING.md  ChangeLog.md  DATA_SOURCE_MODERNIZATION_COMPLETE.md  DEEP_REFACTORING_FINAL_REPORT.md  DOGS_BOLLINGER_STRATEGY_GUIDE.md  DOGS_STRATEGY_FIX.md  DOGS_STRATEGY_QUICK_REF.md  DOGS_STRATEGY_SUMMARY.md  EXPERT_MISSION_COMPLETE.md  EXPERT_MISSION_COMPLETE_V2.md  EXPERT_OPTIMIZATION_REPORT.md  EXPERT_OPTIMIZATION_REPORT_V2.md  EXPERT_PERFORMANCE_REPORT_FINAL.md  FINAL_EXPERT_MISSION_COMPLETE.md  FINAL_MISSION_ACCOMPLISHED_REPORT.md  FINAL_MISSION_REPORT.md  FINAL_OPTIMIZATION_REPORT.md  FINAL_REFACTORING_SUMMARY.md  FINAL_REPORT.md  FINAL_STATUS_REPORT.md  FINAL_SUCCESS_REPORT.md  IFLOW.md  MANIFEST.in  MASTER_OPTIMIZATION_REPORT.md  (+316 more)
.github/: dependabot.yml  pull_request_template.md
analysis_results/: critical_path_analysis_20250530_161419.json  dependency_analysis_20250530_161042.json  metaclass_detection_20250530_161955.json  metaclass_detection_20250530_162057.json  metaclass_detection_20250620_130133.json  metaprogramming_analysis_20250530_155908.json
analyzers/: __init__.py  calmar.py  drawdown.py  leverage.py  logreturnsrolling.py  returns.py  timereturn.py  vwr.py
backtrader/: __init__.py  analyzer.py  broker.py  cerebro.py  channel.py  comminfo.py  compile_cython_numba_files.py  count_chinese.py  dataseries.py  errors.py  events.py  feed.py  fillers.py  flt.py  functions.py  indicator.py  linebuffer.py  lineiterator.py  lineroot.py  lineroot.py.bak  lineseries.py  lineseries_fix.py  mathsupport.py  metabase.py  observer.py  order.py  parameters.py  parameters_backup.py  position.py  position_modes.py  profiles.py  resamplerfilter.py  signal.py  sizer.py  store.py  strategy.py  talib.py  test_helpers.py  timer.py  trade.py  (+3 more)
benchmarks/: benchmark_results_20250530_155724.json  benchmark_results_20250530_155756.json  benchmark_results_20250530_155837.json
brokers/: __init__.py  ccxtbroker.py  ctpbroker.py  ibbroker.py
btrun/: btrun.py
commissions/: dc_commission.py
docs/: .algolia-config.json  .gitignore  2025-03-17---backtrader改进建议.md  API_AUTO_GENERATION_GUIDE.md  ARCHITECTURE.md  BRANCH_COMPARISON.md  BROKER_REFACTOR_COMPLETION_REPORT.md  BUG_CHECK_SUBMITTED_MARGIN_ROLLBACK.md  BUG_RUNONCE_SUBINDICATOR_FROZEN_LINE.md  CCXT_ENV_CONFIG.md  CCXT_LIVE_TRADING_GUIDE.md  CHANGELOG.md  CODE_QUALITY_IMPROVEMENTS.md  CODE_QUALITY_ITERATION_PLAN.md  CODE_QUALITY_ITERATION_PLAN_ROUND2.md  COMPLETION_REPORT.md  COVERAGE_BASELINE.md  DATATRADES_FIX.md  DEPENDENCIES_FIX.md  DEV_REGRESSION_FAILURES.md  DOCUMENTATION_TODO.md  EXTENDED_FEED_FIX.md  FUNDING_RATE_GUIDE.md  INSTALLATION_GUIDE.md  LOGGING_GUIDELINES.md  Makefile  Makefile.i18n  PANDAS_DATA_FEEDS_COMPARISON.md  PROJECT_STATUS.md  README.md  RELEASE.md  RTD_SETUP.md  SITE_INDEX.md  SLOW_TESTS_TODO.md  SPHINX_CONVERSION_GUIDE.md  TODO_FIXME_TRACKER.md  WEBSOCKET_GUIDE.md  WEB_ARCHITECTURE.md  WEB_DEVELOPMENT_PLAN.md  WEB_FRONTEND_OPTIMIZATION.md  (+60 more)
examples/: backtrader_ccxt_okex_sma.py  backtrader_ccxt_okx_dogs_bollinger.py  backtrader_ccxt_okx_mina_futures_long_short.py  bollinger_band_strategy_test.py  (+47 more)
(+9531 files in other folders)
